braid/braid_status.h

/**
 * This is the main Status structure, that contains the properties of all the status.
 * The user does not have access to this structure, but only to the derived Status
 * structures. This class is accessed only inside XBraid code.
 */
typedef struct _braid_Status_struct *braid_Status;
/** @}*/


/*--------------------------------------------------------------------------
 * Routines for user to access XBraid status structures
 *--------------------------------------------------------------------------*/

/** \defgroup braidstatusroutines XBraid status routines
 *  \ingroup userinterface
 *  
 *  XBraid status structures and associated Get/Set routines are what tell 
 *  the user the status of the simulation  when their routines (step, 
 *  coarsen/refine, access) are called. 
 *
 *  @{
 */

/*--------------------------------------------------------------------------
 * Global Status Prototypes
 *--------------------------------------------------------------------------*/

/**
 * Return the current time from the Status structure.
 **/
braid_Int
braid_StatusGetT(braid_Status status,                      /**< structure containing current simulation info */
                 braid_Real  *t_ptr                        /**< output, current time */
                 );
/** Return the index value corresponding to the current time value from the
 * Status structure.  
 *
 * For Step(), this corresponds to the time-index of "tstart", as this is the
 * time-index of the input vector.  That is, NOT the time-index of "tstop".
 * For Access, this corresponds just simply to the time-index of the input
 * vector.
 **/
braid_Int
braid_StatusGetTIndex(braid_Status status,                  /**< structure containing current simulation info */
                      braid_Int   *idx_ptr                  /**< output, global index value corresponding to current time value */
                      );
/**
 * Return the current XBraid level from the Status structure.
 **/
braid_Int
braid_StatusGetLevel(braid_Status status,                  /**< structure containing current simulation info */
                     braid_Int   *level_ptr                /**< output, current level in XBraid */
                     );
/**
 * Return whether this is a wrapper test or an XBraid run
 **/
braid_Int
braid_StatusGetWrapperTest(braid_Status status,            /**< structure containing current simulation info */
                           braid_Int   *wtest_ptr          /**< output, =1 if this is a wrapper test, =0 if XBraid run */
                           );
/**
 * Return the current rank of Delta correction being used
 */
braid_Int
braid_StatusGetDeltaRank(braid_Status status,   /**< structure containing current simulation info */
                         braid_Int   *rank_ptr  /**< output, rank of Delta correction, number of tracked basis vectors */
                         );
/**
 * Return a reference to the basis vector at the current time value and given spatial index
 */
braid_Int
braid_StatusGetBasisVec(braid_Status  status,  /**< structure containing current simulation info */
                        braid_Vector *v_ptr,   /**< output, reference to basis vector */
                        braid_Int     index    /**< input, spatial index (column) of desired basis vector */
                        );
/**
 * Return a reference to an array of local exponents, with each exponent *j* corresponding to the total growth over the previous C-interval
 * in the direction of the *j*th Lyapunov exponent (These are only available after the final FCRelax)
 */
braid_Int
braid_StatusGetLocalLyapExponents(braid_Status   status,       /**< structure containing the current simulation info */
                                  braid_Real    *exp_ptr,      /**< output, reference to array containing (num_returned) exponents */
                                  braid_Int     *num_returned  /**< output, number of exponents contained in exp_ptr */
                                  );